--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
-    "db": "./node_modules/.bin/ts-node ./src/migrations/migration-all-table.ts"
+    "db": "./node_modules/.bin/ts-node ./src/migrations/migration-all-table.ts",
+    "api-docs": "swagger-cli bundle ./src/utils/swagger/openapi.yaml --outfile build/swagger.yaml --type yaml"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
@@ -23,6 +27,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "swagger-cli": "^4.0.4",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   }
 }
