--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
