--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.18",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.6",
@@ -32,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
