--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.18",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -35,6 +36,7 @@
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
